style: adjust dropping texts width and height to prevent text clipping

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -433,7 +433,7 @@
 .dropping-texts-container {
   display: inline-block;
   vertical-align: bottom;
-  height: 1.2em;
+  height: 1.4em;
   position: relative;
   overflow: hidden;
 }
@@ -444,7 +444,7 @@
   margin-left: -30px;
   position: absolute;
   left: 0;
-  top: 0.1em;
+  top: 0;
   white-space: nowrap;
 }
 
